--- a/forms.html
+++ b/forms.html
@@ -6,3 +6,16 @@
 <body>
 	<div id="html-forms">
 		<form>
+	
+			<label for="text">Type Text:</label><br>
+		  	<input type="text" id="text" name="text"><br> 
+			<label for="Username or Email">Type Username or Email:</label><br>
+  			<input type="Username or Email" id="Username or Email" name="Username or Email"><br>
+		  	<label for="pwd">Type Password:</label><br>
+		  	<input type="password" id="pwd" name="pwd"><br>
+			
+			<h2>Type Radio</h2>	
+		  	<input type="radio" id="male" name="Gender" value="MALE">
+  		  	<label for="male">MALE</label><br>	
+		  	<input type="radio" id="female" name="Gender" value="FEMALE">
+  		  	<label for="female">FEMALE</label><br>		
