--- a/forms.html
+++ b/forms.html
@@ -14,7 +14,7 @@
 		  	<label for="pwd">Type Password:</label><br>
 		  	<input type="password" id="pwd" name="pwd"><br>
 			
-			<h2>Type Radio</h2>	
+			<h2>GENDER</h2>	
 		  	<input type="radio" id="male" name="Gender" value="MALE">
   		  	<label for="male">MALE</label><br>	
 		  	<input type="radio" id="female" name="Gender" value="FEMALE">
