--- a/forms.html
+++ b/forms.html
@@ -7,12 +7,12 @@
 	<div id="html-forms">
 		<form>
 	
-			<label for="text">Type Text:</label><br>
+			<label for="text">Lastname:</label><br>
 		  	<input type="text" id="text" name="text"><br> 
-			<label for="Username or Email">Type Username or Email:</label><br>
-  			<input type="Username or Email" id="Username or Email" name="Username or Email"><br>
-		  	<label for="pwd">Type Password:</label><br>
-		  	<input type="password" id="pwd" name="pwd"><br>
+			<label for="text">Firstname:</label><br>
+  			<input type="text" id="text" name="text"><br>
+		  	<label for="text">Middle Name:</label><br>
+		  	<input type="text" id="text" name="text"><br>
 			
 			<h2>GENDER</h2>	
 		  	<input type="radio" id="male" name="Gender" value="MALE">
