--- a/forms.html
+++ b/forms.html
@@ -19,3 +19,8 @@
   		  	<label for="male">MALE</label><br>	
 		  	<input type="radio" id="female" name="Gender" value="FEMALE">
   		  	<label for="female">FEMALE</label><br>		
+	</form>
+	</div>
+
+</body>
+</html>
