--- a/forms.html
+++ b/forms.html
@@ -14,11 +14,17 @@
 		  	<label for="text">Middle Name:</label><br>
 		  	<input type="text" id="text" name="text"><br>
 			
-			<h2>GENDER</h2>	
+			<h2>Gender</h2>	
 		  	<input type="radio" id="male" name="Gender" value="MALE">
   		  	<label for="male">MALE</label><br>	
 		  	<input type="radio" id="female" name="Gender" value="FEMALE">
   		  	<label for="female">FEMALE</label><br>		
+			
+			<h2>Birthdate and Birthplace</h2>
+			<label for="birthday">Birthday:</label>
+  			<input type="date" id="birthday" name="birthday"><br>	
+			<label for="text">Birthplace:</label><br>
+		  	<input type="text" id="text" name="text"><br> 
 	</form>
 	</div>
 
