--- a/forms.html
+++ b/forms.html
@@ -7,6 +7,7 @@
 	<div id="html-forms">
 		<form>
 	
+			<h1>Complete Name</h1>
 			<label for="text">Lastname:</label><br>
 		  	<input type="text" id="text" name="text"><br> 
 			<label for="text">Firstname:</label><br>
@@ -25,6 +26,10 @@
   			<input type="date" id="birthday" name="birthday"><br>	
 			<label for="text">Birthplace:</label><br>
 		  	<input type="text" id="text" name="text"><br> 
+			
+			<h2>Hobbies</h2>	
+			<label for="textarea">Hobbies:</label><br>
+			<textarea name="textarea"></textarea>
 	</form>
 	</div>
 
