--- a/forms.html
+++ b/forms.html
@@ -7,7 +7,9 @@
 	<div id="html-forms">
 		<form>
 	
-			<h1>Complete Name</h1>
+			<h1>Registration Form</h1>
+			
+			<h2>Complete Name</h2>
 			<label for="text">Lastname:</label><br>
 		  	<input type="text" id="text" name="text"><br> 
 			<label for="text">Firstname:</label><br>
@@ -30,6 +32,8 @@
 			<h2>Hobbies</h2>	
 			<label for="textarea">Hobbies:</label><br>
 			<textarea name="textarea"></textarea>
+			
+			
 	</form>
 	</div>
 
