--- a/forms.html
+++ b/forms.html
@@ -27,13 +27,29 @@
 			<label for="birthday">Birthday:</label>
   			<input type="date" id="birthday" name="birthday"><br>	
 			<label for="text">Birthplace:</label><br>
-		  	<input type="text" id="text" name="text"><br> 
+		  	<input type="text" id="text" name="text"><br>
+			
+			<h2>Phone Number and Address</h2>	
+			<label for="phone">Enter your phone number:</label><br>
+  			<input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br>
+			<label for="text">Complete Address:</label><br>
+		  	<input type="text" id="text" name="text"><br>
 			
 			<h2>Hobbies</h2>	
 			<label for="textarea">Hobbies:</label><br>
 			<textarea name="textarea"></textarea>
 			
+			<h2>Type Checkbox</h2>	
+			<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+		  	<label for="vehicle1"> I have a bike</label><br>
+		  	<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+		  	<label for="vehicle2"> I have a car</label><br>
+		  	<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+		  	<label for="vehicle3"> I have a boat</label><br>			
 			
+			<h3>Submitand Reset</h3>
+			Submit : <input type="submit" value="GO!"><br>
+			Reset : <input type="reset" value="Delete"><br>
 	</form>
 	</div>
 
