--- a/forms.html
+++ b/forms.html
@@ -39,15 +39,15 @@
 			<label for="textarea">Hobbies:</label><br>
 			<textarea name="textarea"></textarea>
 			
-			<h2>Type Checkbox</h2>	
-			<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-		  	<label for="vehicle1"> I have a bike</label><br>
-		  	<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-		  	<label for="vehicle2"> I have a car</label><br>
-		  	<input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-		  	<label for="vehicle3"> I have a boat</label><br>			
+			<h2>Users Device</h2>	
+			<input type="checkbox" id="cellphone" name="cellphone" value="Cellphone">
+			<label for="cellphone"> Smartphone</label><br>
+		  	<input type="checkbox" id="computer" name="computer" value="Computer">
+			<label for="computer"> id=Personal Computer</label><br>
+		  	<input type="checkbox" id="laptop" name="laptop" value="Laptop">
+		  	<label for="laptop"> Laptop</label><br>			
 			
-			<h3>Submitand Reset</h3>
+			<h3>Submit and Reset</h3>
 			Submit : <input type="submit" value="GO!"><br>
 			Reset : <input type="reset" value="Delete"><br>
 	</form>
