--- a/forms.html
+++ b/forms.html
@@ -43,7 +43,7 @@
 			<input type="checkbox" id="cellphone" name="cellphone" value="Cellphone">
 			<label for="cellphone"> Smartphone</label><br>
 		  	<input type="checkbox" id="computer" name="computer" value="Computer">
-			<label for="computer"> id=Personal Computer</label><br>
+			<label for="computer"> Personal Computer</label><br>
 		  	<input type="checkbox" id="laptop" name="laptop" value="Laptop">
 		  	<label for="laptop"> Laptop</label><br>			
 			
